--- a/Zybach.Web/Zybach.Web.csproj
+++ b/Zybach.Web/Zybach.Web.csproj
@@ -53,5 +53,7 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+      <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
     </ItemGroup>
 </Project>
