--- a/Zybach.API/Zybach.API.csproj
+++ b/Zybach.API/Zybach.API.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="SendGrid" Version="9.28.0" />
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.1.0" />
     <PackageReference Include="SharpDocx" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
