--- a/charts/zybach/charts/zybach-swagger/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-swagger/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     tags.datadoghq.com/env: {{ .Values.global.env.name | quote }}
     tags.datadoghq.com/service: {{ include "swagger.fullname" . }}
-    tags.datadoghq.com/team: {{ .Values.namespace | quote }}
+    tags.datadoghq.com/teamName: {{ .Values.namespace | quote }}
     {{- include "swagger.labels" . | nindent 4 }}
 spec:
   revisionHistoryLimit: 1 # Default to 10 if not specified
