--- a/charts/zybach/charts/zybach-web/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-web/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     tags.datadoghq.com/env: {{ .Values.global.env.name | quote }}
     tags.datadoghq.com/service: {{ include "web.fullname" . }}
     tags.datadoghq.com/teamName: {{ .Values.namespace | quote }}
+    tags.datadoghq.com/version: {{ .Values.image.tag | quote }}
     {{- include "web.labels" . | nindent 4 }}
 spec:
   revisionHistoryLimit: 1 # Default to 10 if not specified
