--- a/Zybach.Models/Zybach.Models.csproj
+++ b/Zybach.Models/Zybach.Models.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="ProjNET" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Abstracts\" />
+  </ItemGroup>
 </Project>
