--- a/Zybach.Web/package.json
+++ b/Zybach.Web/package.json
@@ -56,6 +56,7 @@
     "bootstrap": "^5.2.0",
     "color-scheme": "^1.0.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "google-palette": "^1.1.0",
     "iso8601-js-period": "^0.2.1",
