--- a/Zybach.API/Zybach.API.csproj
+++ b/Zybach.API/Zybach.API.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="GDAL" Version="3.8.5" />
     <PackageReference Include="GeoJSON.Net" Version="1.2.19" />
     <PackageReference Include="Hangfire" Version="1.7.29" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.29" />
