--- a/docker-compose/docker-compose.override.yml
+++ b/docker-compose/docker-compose.override.yml
@@ -68,38 +68,26 @@ services:
 
   geoserver:
     container_name: zybach_geoserver
-    image: kartoza/geoserver:2.16.2
-    entrypoint: /bin/bash /opt/geoserver/data_dir/sitka-geoserver-config/scripts/sitka-entry-point.sh
+    image: kartoza/geoserver:2.25.2
     environment:
       - ENABLE_JSONP=true
       - CATALINA_OPTS=-DALLOW_ENV_PARAMETRIZATION=true
       - STABLE_EXTENSIONS=sqlserver-plugin
-      # default login is admin unless a different value is specified here
+      - TOMCAT_EXTRAS=false
+      - ROOT_WEBAPP_REDIRECT=true
+      - SAMPLE_DATA=false
       - GEOSERVER_ADMIN_USER=admin
-      # default password is geoserver unless specified differently in the secret
-      - GEOSERVER_ADMIN_PASSWORD_SECRET=/run/secrets/GeoserverAdminPassword.txt
-      - GEOSERVER_SQL_SERVER_PASSWORD_SECRET=/run/secrets/GeoserverSqlServerPassword.txt
-      - GEOSERVER_CONFIG_DIRECTORY=/opt/geoserver/data_dir
+      - GEOSERVER_ADMIN_PASSWORD=${GeoserverAdminPassword}
     ports:
       - 127.0.0.1:8717:8080
     volumes:
       - c:/git/sitkatech/zybach/Zybach.GeoServer/data_dir:/opt/geoserver/data_dir
-    secrets:
-      - GeoserverSqlServerPassword.txt
-      - GeoserverAdminPassword.txt
 
   vegarenderservice:
     container_name: zybach_vegarenderservice
-    image: esacontainers.azurecr.io/vegarenderservice:latest
+    image: containersesaqa.azurecr.io/vegarenderservice:latest
     environment:
       - PORT=8090
     ports:
       - "8709:8080"
       - "8710:8081"
-
-secrets:
-  GeoserverSqlServerPassword.txt:
-    file: C:\Sitka\Zybach\Geoserver\GeoserverSqlServerPassword.txt
-      # using "file:"  allows you to mimic docker secrets on your dev machine by pointing to a plaintext file
-  GeoserverAdminPassword.txt:
-    file: C:\Sitka\Zybach\Geoserver\GeoserverAdminPassword.txt
